Override project with Trial-Zenith full project snapshot
Replace the working tree with the provided full-project export: new
lunararc-api surface (LunarArcServerApi, LunarArcPlatform, ticking
tracker, version/unsafe helpers), expanded common-module bridges,
reworked installer/launcher sources, and updated build/CI config and
.gitignore.